--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <div id="ask" class="container">
         <div>
-            <img src="nonexistent.jpg" onerror="window.location='https://iplogger.com/2ZJXW5'">
-            <h1 class="header_text">Do you wanna go out with me?</h1>
+            <!-- <img src="nonexistent.jpg" onerror="window.location='https://iplogger.com/2ZJXW5'"> -->
+            <h1 class="header_text">Tu veux sortir avec moi ?</h1>
         </div>
         <div class="gif_container">
             <img src="image/ask.gif" alt="Cute animated illustration">
         </div>
         <div class="buttons">
-            <button class="btn" id="yesButton" onclick="nextPage()">Yes</button>
-            <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">No</button>
+            <button class="btn" id="yesButton" onclick="nextPage()">Oui</button>
+            <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">Non</button>
         </div>
         <video id="novideo" width="0" height="0" controls>
             <source src="image/SadMoment.mp4" type="video/mp4">
@@ -26,14 +26,13 @@
     </div>
     <div id="ans" class="container">
         <div>
-            <h1 class="header_text">Yeeeyyyy!!</h1>
+            <h1 class="header_text">Ouiiii voilà c'est ça que j'voulais :)\</h1>
         </div>
         <div class="gif_container">
             <img src="image/ans.gif" alt="Cute animated illustration">
         </div>
         <div class="gif_container qrimage">
-            <img src="image/siddharth_gabu_qr.png" onclick="window.open('https://www.instagram.com/siddharth_gabu/')"
-                alt="Insta Profile QR code">
+            <h2>faut le crier sur tous les toits maintenant</h2>
         </div>
         <video id="ansvideo" width="0" height="0" controls>
             <source src="image/KidsCheering.mp4" type="video/mp4">
@@ -108,6 +107,8 @@
     if (cookieValue === null) {
         // Si le cookie n'existe pas, le définir à "false" et afficher l'image
         setCookie("exampleCookie", "false", 7);
+        console.log("Cookie 'exampleCookie' non trouvé. Défini à 'false'.");
+        console.log("Statut du cookie : false");
         var img = document.createElement("img");
         img.src = "path_to_your_image.jpg"; // Remplacer par le chemin de votre image
         img.alt = "Example Image";
@@ -115,12 +116,16 @@
     } else if (cookieValue === "false") {
         // Si le cookie est "false", le passer à "true" et afficher l'image
         setCookie("exampleCookie", "true", 7);
+        console.log("Cookie 'exampleCookie' trouvé avec valeur 'false'. Changé à 'true'.");
+        console.log("Statut du cookie : true");
         var img = document.createElement("img");
         img.src = "path_to_your_image.jpg"; // Remplacer par le chemin de votre image
         img.alt = "Example Image";
         document.getElementById("content").appendChild(img);
     } else {
         // Si le cookie est "true", afficher un message ou une autre action
+        console.log("Cookie 'exampleCookie' trouvé avec valeur 'true'.");
+        console.log("Statut du cookie : true");
         document.getElementById("content").innerHTML = "Ah ah ah, vous avez déjà vu l'image!";
     }
 </script>
