--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-    <div id="ask" class="container">
+    <!-- <div id="ask" class="container">
         <div>
-            <!-- <img src="nonexistent.jpg" onerror="window.location='https://iplogger.com/2ZJXW5'"> -->
             <h1 class="header_text">Tu veux sortir avec moi ?</h1>
         </div>
         <div class="gif_container">
@@ -37,6 +36,11 @@
         <video id="ansvideo" width="0" height="0" controls>
             <source src="image/KidsCheering.mp4" type="video/mp4">
         </video>
+    </div> -->
+    <div id="ask" class="container">
+        <div>
+            <h1 class="header_text">Hey</h1>
+        </div>
     </div>
 </body>
 <script>
