--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <source src="image/KidsCheering.mp4" type="video/mp4">
         </video>
     </div> -->
-    <div id="ask" class="container">
+    <div id="" class="">
         <div>
             <h1 class="header_text">Hey</h1>
         </div>
