--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-IN" dir="ltr">
 
 <head>
-    <title>Tu veux sortir avec moi?</title>
+    <title>ça va ?</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./style.css">
 </head>
