--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="image/ans.gif" alt="Cute animated illustration">
         </div>
         <div class="gif_container qrimage">
-            <h2>faut le crier sur tous les toits maintenant :3</h2>
+            <h2>faut le crier sur tous les toîts maintenant :3</h2>
         </div>
         <video id="ansvideo" width="0" height="0" controls>
             <source src="image/KidsCheering.mp4" type="video/mp4">
